web/styles/event-list.module.css
.eventList {
  display: flex;
  flex-wrap: wrap;
  gap: 40px;
  display: grid;
  grid-template-columns: 1fr;
  justify-items: center;
}

@media screen and (min-width: 890px) {
  .eventList {
    width: 840px;
    grid-template-columns: repeat(auto-fit, 400px);
  }
}

@media screen and (min-width: 1300px) {
  .eventList {
    width: 1280px;
  }
}

.eventList > li {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.footer {
  margin-top: 48px;
  background-color: var(--color-red);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 56px 34px;
}

@media screen and (min-width: 890px) {
  .footer {
    padding: 56px 80px;
  }
}

@media screen and (min-width: 1280px) {
  .footer {
    padding: 56px 140px;
  }
}

.footer a {
  display: inline-flex;
  align-items: center;
  border-radius: 50px;
  padding: 24px 64px;
  background-color: var(--color-black);
  text-align: center;
  display: inline-block;
  letter-spacing: 1px;
  padding: 1rem 1.75rem;
  text-decoration: none;
  cursor: pointer;
  color: var(--color-foreground-light);
  font-weight: bold;
  transition: color 0.3s, background 0.3s;
  border: none;
  text-align: center;
}

.footer a:hover {
  background-color: var(--color-purple);
}

.footer p {
  text-align: center;
  line-height: 24px;
}

.filterGroup {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100%;
  margin-bottom: 20px;
}

.filter {
  margin: 5px 10px 5px 0;
  max-width: 300px;
  min-width: 200px;
}

.filter ::-webkit-input-placeholder {
  /* WebKit, Blink, Edge */
  color: black;
}
.filter :-moz-placeholder {
  /* Mozilla Firefox 4 to 18 */
  color: black;
  opacity: 1;
}
.filter ::-moz-placeholder {
  /* Mozilla Firefox 19+ */
  color: black;
  opacity: 1;
}
.filter :-ms-input-placeholder {
  /* Internet Explorer 10-11 */
  color: black;
}
.filter ::-ms-input-placeholder {
  /* Microsoft Edge */
  color: black;
}

.filter ::placeholder {
  /* Most modern browsers support this now. */
  color: black;
}

@media screen and (min-width: 890px) {
  .filterGroup {
    width: 840px;
  }
}

@media screen and (min-width: 1300px) {
  .filterGroup {
    width: 1280px;
  }
}

